Add a new match to the database

--- a/PoolTracker.api/Properties/launchSettings.json
+++ b/PoolTracker.api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "PoolTracker.api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/players",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
